envoy/gateway/examples/multi-gateway/gateway1.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - name: httpbin
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: eg-8081
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: eg-8081
spec:
  gatewayClassName: eg-8081
  listeners:
    - name: http
      protocol: HTTP
      port: 8081
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: httpbin-8080
spec:
  parentRefs:
    - name: eg-8081
  rules:
    - backendRefs:
        - name: httpbin
          port: 8080
